--- a/.github/workflows/follow.yml
+++ b/.github/workflows/follow.yml
@@ -7,14 +7,11 @@ name: Follow Job
     - cron: "*/15 * * * *"
 
 jobs:
-  run_bb_job:
+  run_follow_job:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - run: npm i
-      - uses: szenius/set-timezone@v1.0
-        with:
-          timezoneLinux: "Asia/Tokto"
       - run: node followback
         env:
           TWITTER_API_KEY: ${{ secrets.TWITTER_API_KEY }}
