--- a/.github/workflows/tweet.yml
+++ b/.github/workflows/tweet.yml
@@ -11,6 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - run: apt install -y fonts-noto-cjk
       - run: npm i
       - run: node app
         env:
