--- a/.github/workflows/tweet.yml
+++ b/.github/workflows/tweet.yml
@@ -11,6 +11,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
       - run: sudo apt install -y fonts-noto-cjk
       - run: npm i
       - run: node app
