--- a/.github/workflows/follow.yml
+++ b/.github/workflows/follow.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-      - run: npm i
+      - run: npm ci
       - run: node followback
         env:
           TWITTER_API_KEY: ${{ secrets.TWITTER_API_KEY }}
