Fix: proper way to run ci

--- a/.github/workflows/tweet.yml
+++ b/.github/workflows/tweet.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           node-version: 16
       - run: sudo apt install -y fonts-noto-cjk
-      - run: npm i
+      - run: npm ci
       - run: node app
         env:
           TWITTER_API_KEY: ${{ secrets.TWITTER_API_KEY }}
