Edit: frequency changed

--- a/.github/workflows/tweet.yml
+++ b/.github/workflows/tweet.yml
@@ -4,7 +4,7 @@ name: Tweet Job
     branches:
       - test-run
   schedule:
-    - cron: "0/5 * * * *"
+    - cron: "0 * * * *"
 
 jobs:
   run_tweet_job:
